--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,6 +26,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install build
 
+    - name: Install twine
+      run: python -m pip install twine
+
     - name: Build package
       run: python -m build
 
