--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Install twine
       run: python -m pip install twine
 
+    - name: Install setuptools_scm
+      run: python -m pip install setuptools_scm
+    
     - name: Build package
       run: python -m build
 
