--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -35,6 +35,16 @@ jobs:
     - name: Build package
       run: python -m build
 
+    - name: Update version
+      run: |
+        CURRENT_VERSION=$(python -c "import setuptools_scm.version; print(setuptools_scm.version.get_version())")
+        NEW_VERSION="$CURRENT_VERSION"
+        while twine check --config-file ~/.pypirc dist/* | grep -q "File already exists"; do
+          NEW_VERSION=$(python -c "parts = '$NEW_VERSION'.split('.'); parts[-1] = str(int(parts[-1]) + 1); print('.'.join(parts))")
+          echo "Updating version to $NEW_VERSION"
+          sed -i "s/version=\"$CURRENT_VERSION\"/version=\"$NEW_VERSION\"/" setup.py
+        done
+
     - name: Publish package
       env:
         PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
