--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,8 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools_scm build twine
-
+        pip install build
     - name: Install twine
       run: python -m pip install twine
 
@@ -35,16 +34,6 @@ jobs:
     - name: Build package
       run: python -m build
 
-    - name: Update version
-      run: |
-        CURRENT_VERSION=$(python -c "import re; version = re.search(r'^version\s*=\s*[\"']([^\"']+)[\"']', open('setup.py').read(), re.MULTILINE); print(version.group(1) if version else '')")
-        NEW_VERSION="$CURRENT_VERSION"
-        while twine check --config-file ~/.pypirc dist/* | grep -q "File already exists"; do
-          NEW_VERSION=$(python -c "parts = '$NEW_VERSION'.split('.'); parts[-1] = str(int(parts[-1]) + 1); print('.'.join(parts))")
-          echo "Updating version to $NEW_VERSION"
-          sed -i "s/version=\"$CURRENT_VERSION\"/version=\"$NEW_VERSION\"/" setup.py
-        done
-
     - name: Publish package
       env:
         PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
@@ -56,25 +45,4 @@ jobs:
         echo "repository: https://upload.pypi.org/legacy/" >> ~/.pypirc
         echo "username: __token__" >> ~/.pypirc
         echo "password: $PYPI_API_TOKEN" >> ~/.pypirc
-        twine upload --config-file ~/.pypirc dist/* --verbose
-    - name: Update version
-      run: |
-        CURRENT_VERSION=$(python -c "import re; version = re.search(r'^version\s*=\s*[\"']([^\"']+)[\"']', open('setup.py').read(), re.MULTILINE); print(version.group(1) if version else '')")
-        NEW_VERSION="$CURRENT_VERSION"
-        while twine check --config-file ~/.pypirc dist/* | grep -q "File already exists"; do
-          NEW_VERSION=$(python -c "parts = '$NEW_VERSION'.split('.'); parts[-1] = str(int(parts[-1]) + 1); print('.'.join(parts))")
-          echo "Updating version to $NEW_VERSION"
-          sed -i "s/version=\"$CURRENT_VERSION\"/version=\"$NEW_VERSION\"/" setup.py
-        done
-    - name: Publish package
-      env:
-        PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-      run: |
-        echo "[distutils]" > ~/.pypirc
-        echo "index-servers =" >> ~/.pypirc
-        echo "    pypi" >> ~/.pypirc
-        echo "[pypi]" >> ~/.pypirc
-        echo "repository: https://upload.pypi.org/legacy/" >> ~/.pypirc
-        echo "username: __token__" >> ~/.pypirc
-        echo "password: $PYPI_API_TOKEN" >> ~/.pypirc
-        twine upload --config-file ~/.pypirc dist/* --verbose
+        twine upload --config-file ~/.pypirc dist/*
