--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,6 @@ permissions:
 
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -25,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+
     - name: Install twine
       run: python -m pip install twine
 
@@ -32,7 +32,7 @@ jobs:
       run: python -m pip install setuptools_scm
     
     - name: Build package
-      run: python -m build
+      run: python -m build --sdist --wheel
 
     - name: Publish package
       env:
@@ -45,4 +45,14 @@ jobs:
         echo "repository: https://upload.pypi.org/legacy/" >> ~/.pypirc
         echo "username: __token__" >> ~/.pypirc
         echo "password: $PYPI_API_TOKEN" >> ~/.pypirc
+
+        VERSION=$(python -c "from setuptools_scm import get_version; print(get_version())")
+        if twine check --config-file ~/.pypirc dist/* 2>&1 | grep -q "File already exists"; then
+          echo "Package version already exists on PyPI. Increasing version number..."
+          NEW_VERSION=$(python -c "from packaging.version import Version; v = Version('$VERSION'); v = v.bump_patch(); print(v)")
+          echo "New version: $NEW_VERSION"
+          sed -i "s/version=\"$VERSION\"/version=\"$NEW_VERSION\"/g" setup.py
+          python -m build --sdist --wheel
+        fi
+
         twine upload --config-file ~/.pypirc dist/*
