--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -55,4 +55,4 @@ jobs:
           python -m build --sdist --wheel
         fi
 
-        twine upload --config-file ~/.pypirc dist/*
+        twine upload --config-file ~/.pypirc dist/* --verbose
