--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,14 +31,9 @@ jobs:
     - name: Install setuptools_scm
       run: python -m pip install setuptools_scm
     
-    - name: Build package
-      run: python -m build --sdist --wheel
-
-    - name: Publish package
+    - name: Build and publish package
       env:
         PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-        EXISTING_FILE_PATH: ''
-        EXISTING_FILE_NAME: ''
       run: |
         echo "[distutils]" > ~/.pypirc
         echo "index-servers =" >> ~/.pypirc
@@ -49,20 +44,36 @@ jobs:
         echo "password: $PYPI_API_TOKEN" >> ~/.pypirc
 
         VERSION=$(python -c "from setuptools_scm import get_version; print(get_version())")
+        python -m build --sdist --wheel
         if twine check --config-file ~/.pypirc dist/* 2>&1 | grep -q "File already exists"; then
           echo "Package version already exists on PyPI. Retrieving existing file information..."
           EXISTING_FILE_PATH=$(twine check --config-file ~/.pypirc dist/* 2>&1 | grep "File already exists" | awk -F "'" '{print $2}')
           EXISTING_FILE_NAME=$(basename "$EXISTING_FILE_PATH")
           echo "Existing file name: $EXISTING_FILE_NAME"
           echo "Existing file path: $EXISTING_FILE_PATH"
+          echo "EXISTING_FILE_PATH=$EXISTING_FILE_PATH" >> $GITHUB_ENV
+          echo "EXISTING_FILE_NAME=$EXISTING_FILE_NAME" >> $GITHUB_ENV
         else
-          twine upload --config-file ~/.pypirc dist/* --verbose
+          twine upload --config-file ~/.pypirc dist/*
+          echo "Package successfully published on PyPI"
         fi
 
-        echo "::set-env name=EXISTING_FILE_PATH::$EXISTING_FILE_PATH"
-        echo "::set-env name=EXISTING_FILE_NAME::$EXISTING_FILE_NAME"
+        echo "::set-output name=version::$VERSION"
 
-    - name: Print existing file information
-      run: |
-        echo "Existing file name: $EXISTING_FILE_NAME"
-        echo "Existing file path: $EXISTING_FILE_PATH"
+    - name: Create new release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ steps.deploy.outputs.version }}
+        release_name: Release ${{ steps.deploy.outputs.version }}
+        draft: false
+        prerelease: false
+
+    - name: Attach PyPI release link
+      uses: svenstaro/upload-release-action@v2
+      with:
+        file: ${{ steps.deploy.outputs.version }}/dist/*
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{ steps.deploy.outputs.version }}
+        overwrite: false
